Cycles - OpenCL - HDR Image mapping does not match CUDA rendering #48691

Closed
opened 2016-06-21 00:10:16 +02:00 by Carlo Andreacchio · 6 comments

System Information
Linux Mint 17
AMD R390x 8gb
NVIDIA GTX580

Blender Version
Broken: 9c60043

Short description of error
HDR image mapping does not match cuda (or CPU) rendering. Please find attached example images (as world environment)

Exact steps for others to reproduce the error

  1. open attached blend file
  2. render with cpu
  3. change slot
  4. render with amd opencl
  5. notice it is slightly off when switching slots super fast
    {F317877}cuda.jpg

openCLHDRBug.blend

**System Information** Linux Mint 17 AMD R390x 8gb NVIDIA GTX580 **Blender Version** Broken: 9c60043 **Short description of error** HDR image mapping does not match cuda (or CPU) rendering. Please find attached example images (as world environment) **Exact steps for others to reproduce the error** 1. open attached blend file 2. render with cpu 3. change slot 4. render with amd opencl 5. notice it is slightly off when switching slots super fast {[F317877](https://archive.blender.org/developer/F317877/ocl.jpg)}![cuda.jpg](https://archive.blender.org/developer/F317878/cuda.jpg) [openCLHDRBug.blend](https://archive.blender.org/developer/F317876/openCLHDRBug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

This issue was referenced by blender/cycles@ef0de67bba

This issue was referenced by blender/cycles@ef0de67bbae6f63e53089aba020f0110b99b06fc

This issue was referenced by 29ce3dfeb6

This issue was referenced by 29ce3dfeb6a8b0e85c477e7b917b50a6eaca8024
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48691
No description provided.